# dpdu

./: .gitignore  LICENSE  README.md  rust-toolchain.toml
dpdu-api-types/: Cargo.toml
dpdu-api-types/src/: enums.rs  functions.rs  lib.rs  structures.rs
dpdu-api-types/src/bitflags/: mod.rs  pdu_error.rs
dpdu-pedic/: Cargo.toml  README.md
dpdu-pedic/src/: lib.rs
dpdu-pedic/src/dpdu/: event_bus.rs  logical_links.rs  mod.rs  objects.rs  state.rs  timestamp.rs
dpdu-pedic/src/dpdu/funcs/: mod.rs  pdu_construct.rs  pdu_create_com_logical_link.rs  pdu_destroy_com_logical_link.rs  pdu_destroy_item.rs  pdu_destruct.rs  pdu_get_module_ids.rs  pdu_get_object_id.rs  pdu_get_status.rs  pdu_get_timestamp.rs  pdu_module_connect.rs  pdu_module_disconnect.rs  pdu_register_event_callback.rs
dpdu-pedic/src/dpdu/types/: mod.rs  pdu_event.rs  pdu_status.rs
dpdu-pedic/src/passthru/: mod.rs
dpdu-pedic/src/utils/: mod.rs
dpdu-wrapper/: .gitignore  Cargo.toml
dpdu-wrapper-support/: Cargo.toml
dpdu-wrapper-support/src/: com_param_stack_configurator.rs  lib.rs  worker_rpc.rs
dpdu-wrapper/src/: api.rs  constants.rs  error.rs  lib.rs
dpdu-wrapper/src/event_callback/: mod.rs
dpdu-wrapper/src/handle_manager/: mod.rs
dpdu-wrapper/src/types/: mod.rs  pdu_com_logical_link.rs  pdu_com_param.rs  pdu_com_param_table.rs  pdu_com_primitive.rs  pdu_com_primivite.rs  pdu_error.rs  pdu_error_data.rs  pdu_event.rs  pdu_event_callback.rs  pdu_io_ctl.rs  pdu_lock_resource.rs  pdu_module.rs  pdu_object.rs  pdu_resource.rs  pdu_status.rs  pdu_vci.rs  pdu_version.rs
dpdu-wrapper/src/types/pdu_com_param/: mod.rs  table.rs
dpdu-wrapper/src/types/pdu_com_param/single/: mod.rs
dpdu-wrapper/src/types/pdu_com_param/single/bus_type/: baudrate.rs  bit_sample_point.rs  can_baudrate_record.rs  canfd_baudrate.rs  canfd_bit_sample_point.rs  canfd_sync_jump_width.rs  listen_only.rs  mod.rs  samples_per_bit.rs  sync_jump_width.rs  termination_type.rs
dpdu-wrapper/src/types/pdu_com_param/single/com/: block_size.rs  block_size_override.rs  can_data_size_offset.rs  can_filler_byte.rs  can_fillter_byte_handling.rs  can_first_consecutive_frame_value.rs  can_func_req_ext_addr.rs  can_func_req_format.rs  can_func_req_id.rs  can_max_num_wait_frames.rs  canfd_tx_max_data_length.rs  change_speed_ctrl.rs  change_speed_message.rs  change_speed_rate.rs  change_speed_res_ctrl.rs  enable_performace_test.rs  loopback.rs  max_first_frame_data_length.rs  mod.rs  request_addr_mode.rs  send_remote_frame.rs  start_msg_ind_enable.rs  sw_can_high_voltage.rs  transmit_ind_enable.rs
dpdu-wrapper/src/types/pdu_com_param/single/err_hdl/: mod.rs  rc21_completion_timeout.rs  rc21_handling.rs  rc21_request_time.rs  rc23_completion_timeout.rs  rc23_handling.rs  rc23_request_time.rs  rc78_completion_timeout.rs  rc78_handling.rs  rc_byte_offset.rs  repeat_req_count_app.rs  repeat_req_count_trans.rs  suspend_queue_on_error.rs
dpdu-wrapper/src/types/pdu_com_param/single/tester_present/: mod.rs  tester_present_addr_mode.rs  tester_present_exp_neg_resp.rs  tester_present_exp_pos_resp.rs  tester_present_handling.rs  tester_present_message.rs  tester_present_req_rsp.rs  tester_present_send_type.rs  tester_present_time.rs
dpdu-wrapper/src/types/pdu_com_param/single/timing/: ar.rs  ass.rs  br.rs  bs.rs  can_transmission_time.rs  change_speed_tx_delay.rs  cr.rs  cs.rs  cyclic_resp_timeout.rs  mod.rs  modify_timing.rs  p2_max.rs  p2_min.rs  p2_star.rs  p3_func.rs  p3_min.rs  p3_phys.rs  session_timing_override.rs  st_min.rs  st_min_override.rs
dpdu-wrapper/src/types/pdu_com_param/single/unique/: can_phys_req_ext_addr.rs  can_phys_req_format.rs  can_phys_req_id.rs  can_phys_uudt_ext_addr.rs  can_resp_usdt_ext_addr.rs  can_resp_usdt_format.rs  can_resp_usdt_id.rs  can_resp_uudt_format.rs  can_resp_uudt_id.rs  ecu_layer_short_name.rs  mod.rs
dpdu-wrapper/src/types/pdu_com_param/stack/: mod.rs
dpdu-wrapper/src/types/pdu_com_param/stack/application/: kwp_stack.rs  mod.rs  raw_can_stack.rs  uds_stack.rs
dpdu-wrapper/src/types/pdu_com_param/stack/composite/: kwp_iso_tp_dw_can_stack.rs  mod.rs  raw_can_stack.rs  uds_iso_tp_dw_can_stack.rs
dpdu-wrapper/src/types/pdu_com_param/stack/physical/: dw_can_stack.rs  mod.rs
dpdu-wrapper/src/types/pdu_com_param/stack/transport/: iso_tp_stack.rs  mod.rs  raw_can_stack.rs
dpdu-wrapper/src/utils/: mod.rs  module_description.rs  root_file.rs  vci_list_resolver.rs
dpdu-wrapper/src/vendor_specific/: mod.rs  vxdiag.rs
dpdu-wrapper/src/vendor_specific/detours/: mod.rs  msg_box_a.rs
dpdu-wrapper/src/worker/: mod.rs  rpc.rs
