[package]
name = "dpdu-pedic"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
dpdu-api-types = { path = "../dpdu-api-types" }
winreg = { version = "0.56.0" }
j2534-mrw = { version = "0.3.6" }
tracing = { version = "0.1.44" }
cfg-if = { version = "1.0.4" }
parking_lot = { version = "0.12.5" }
libloading = { version = "0.9.0" }
map-macro = { version = "0.3.0" }