[package]
name = "dpdu-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { version = "2.0.18" }
quick-xml = { version = "0.41.0", features = ["serialize"] }
serde = { version = "1.0.228", features = ["default", "derive"] }
winreg = { version = "0.56.0" }
cfg-if = { version = "1.0.4" }
tracing = { version = "0.1.44" }
exe = { version = "0.5.7" }
regex = { version = "1.12.4" }
semver = { version = "1.0.28" }
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
dpdu-api-types = { version = "0.9.3", path = "../dpdu-api-types" }
libloading = { version = "0.9.0" }
rand = { version = "0.10.1" }

serde_json = { version = "1.0.150", optional = true }
dpdu-wrapper-support = { version = "0.1.0", path = "../dpdu-wrapper-support", optional = true }

[features]
default = []
with-serde-json = ["serde_json", "dpdu-wrapper-support"]